--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^7.2.1",
-    "jest-dom": "^4.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "3.4.3",
-    "react-test-renderer": "^17.0.1",
-    "tsutils": "^3.17.1",
-    "typescript": "^4.0.5",
     "app": "^0.1.0",
     "create": "0.0.2",
     "create-react-app": "^3.4.1",
     "gsap": "^3.2.6",
-    "mdbreact": "^4.26.0"
+    "jest-dom": "^4.0.0",
+    "mdbreact": "^4.26.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "3.4.3",
+    "react-test-renderer": "^17.0.1",
+    "serve": "^11.3.2",
+    "tsutils": "^3.17.1",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
